welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (( nums(i)==6  & nums(i+1)==6 ) || (nums(i)==6 & nums(i)=7)){
                                                          ^